Feature/convertion endpoint (#9)
* feat: implement support for fetching, caching, and exposing multiple dollar rate types via dedicated endpoints.

* feat: Add Postman collection for Arbolito API endpoints.

* feat: implement currency conversion endpoint with new model, handler, tests, and API documentation.

* docs: add PR description template for convert endpoint

* docs: add PR description template for convert endpoint
