# docs/swagger.json
@@ -18,6 +18,59 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/convert": {
+            "get": {
+                "description": "Convert a specified amount from ARS to USD or USD to ARS using a given rate type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rates"
+                ],
+                "summary": "Convert amount between ARS and USD",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "Amount to convert",
+                        "name": "amount",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Currency to convert from (ARS, USD)",
+                        "name": "from",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Currency to convert to (ARS, USD)",
+                        "name": "to",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Type of dollar rate to use (e.g., blue, oficial)",
+                        "name": "rate_type",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ConversionResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/dolar-blue": {
             "get": {
                 "description": "Get the blue dollar rate aggregated from different sources",
@@ -135,6 +188,29 @@
         }
     },
     "definitions": {
+        "model.ConversionResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "converted_amount": {
+                    "type": "number"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "rate_applied": {
+                    "type": "number"
+                },
+                "rate_type": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Rate": {
             "type": "object",
             "properties": {
